<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".FirstActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoToSecondActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_second_activity_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoToFourthActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_fourth_activity_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoToSixthActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_go_to_sixth_activity_text" />
</LinearLayout>