<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/nested_scroll_content_margin_top"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="48dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/toolbar_title"
            android:textAppearance="?textAppearanceLabelLarge" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textButtonAllServices"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/all_services_text"
            android:textAppearance="?textAppearanceLabelMedium"
            android:textColor="@color/cyan_300" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/textViewOfferService"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/offer_service_margin"
        app:cardBackgroundColor="@color/grey_200"
        app:cardCornerRadius="0dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_states"
            android:drawableStart="@drawable/ic_partnership"
            android:drawablePadding="@dimen/padding_horizontal"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/offer_service_padding_horizontal"
            android:paddingVertical="@dimen/offer_service_padding_vertical"
            android:text="@string/offer_service"
            android:textAppearance="?textAppearanceTitleMedium" />
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewServices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/recycler_view_margin_top"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_service" />
</LinearLayout>